fix: remove height of autocomplete overlay if not visible

--- a/src/angular/autocomplete/autocomplete.scss
+++ b/src/angular/autocomplete/autocomplete.scss
@@ -6,6 +6,7 @@
 
 .sbb-autocomplete-hidden {
   visibility: hidden;
+  padding: 0 !important;
 }
 
 .sbb-autocomplete-panel {
